--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOI4>>CIV6</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../images/icon/favicon.ico" type="image/x-icon">
-    <script src="../scripts.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
