--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-  <!-- <div id="myModal" class="modal">
+  <div id="myModal" class="modal">
     <div class="modal-content">
         <p><b>WARNING</b><br>This website includes depictions of flags associated with totalitarian regimes, including symbols from historical periods such as Nazism. The intention behind showcasing these symbols is not to endorse or support the ideologies represented. The content is presented for educational and historical purposes only. Viewer discretion is advised.</p>
         <button id="continueButton">Continue</button>
     </div>
-  </div> -->
+  </div>
     <header>
       <h1>Hearts of Iron IV</h1>
       <nav>
