rework of the contact page

--- a/picturegallery.html
+++ b/picturegallery.html
@@ -16,7 +16,7 @@
           <a class="width" href="index.html">Basic Info</a>
           <a class="active width" href="picturegallery.html">Picture Gallery</a>
           <a class="width" href="comparison.html">Comparison against CiV6</a>
-          <a class="width" href="contact.html">Contact</a>
+          <a class="width" href="contact.html">Contact and info about the website</a>
         </div>
       </nav>
     </header>
