--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,16 @@
           <a class="width" href="index.html">Basic Info</a>
           <a class="width" href="picturegallery.html">Picture Gallery</a>
           <a class="width" href="comparison.html">Comparison against CiV6</a>
-          <a class="active width" href="contact.html">Contact</a>
+          <a class="active width" href="contact.html">Contact and info about the website</a>
         </div>
       </nav>
 
       <div class="mainPart ContactPart">
         <p class="Contact">The entire webpage was made by Robert Bilík. It was made as a final work for WEB at my high school.
-          <br><br><b>Contact info:</b><br>Email: robert.bilik@spsehavirov.cz<br>Youtube channel: <a href="https://www.youtube.com/@robkooyt" target="_blank">RobkooYT</a><br>Reddit: <a href="https://www.reddit.com/user/u_Robkoo" target="_blank">u_Robkoo</a><br>Discord: Robkoo
+          <br><br><b>Contact info:</b><br>Email: robert.bilik@spsehavirov.cz<br>Youtube channel: <a href="https://www.youtube.com/@robkooyt" target="_blank">RobkooYT</a><br>Reddit: <a href="https://www.reddit.com/user/u_Robkoo" target="_blank">u_Robkoo</a><br>Discord: Robkoo<br>Github: <a href="https://github.com/RobkooCZ" target="_blank">RobkooCZ</a>
           <br><br>(PS: You can check out the background images on this page :D)
+          <br><br>The website works for Edge, Mozzila, Opera GX & Opera and Chrome. It's made with HTML5, CSS and JS. 
+          <br><br>Thanks to <a href="https://github.com/KejBeg" target="_blank">KejBeg</a> for <b>helping</b> me with JS!
         </p>
       </div>
     </header>
