--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a class="active width" href="index.html">Basic Info</a>
           <a class="width" href="picturegallery.html">Picture Gallery</a>
           <a class="width" href="comparison.html">Comparison against CiV6</a>
-          <a class="width" href="contact.html">Contact</a>
+          <a class="width" href="contact.html">Contact and info about the website</a>
         </div>
       </nav>
     </header>
