minor fixes in the comparison 2.

--- a/comparison.html
+++ b/comparison.html
@@ -32,9 +32,9 @@
           </p>
 
           <p><br><b class="bigAssText">2. Time Period</b><br>
-            <b>Hearts of Iron IV:</b> Set during World War II, with a focus on the years 1936 to 1948.
+            <b>Hearts of Iron IV:</b> Set during World War II, with a focus on the years 1936 to 1948. (You can go even further but your CPU will not let you (it gets quite laggy))
             <br><br>
-            <b>Civilization VI:</b> Spans the entire course of human history, from ancient times to the modern era.
+            <b>Civilization VI:</b> Spans the entire course of human history, from ancient times to the modern era. If you have the Gathering storm DLC, you can go to the future.
           </p>
           
           <p><br><b class="bigAssText">3. Gameplay</b><br>
