Fixed a missing div ending

--- a/comparison.html
+++ b/comparison.html
@@ -64,5 +64,6 @@
             <br><br>
             <b>Civilization VI:</b> Civ6, with its stylized art and turn-based nature, generally has more modest hardware requirements. The game is designed to be accessible to a wider range of systems, making it suitable for players with varying hardware capabilities. Civ6's scalability allows it to run smoothly on both newer and older hardware configurations.
           </p>
-</body>
+      </div>
+</body> 
 </html>
