--- a/comparison.html
+++ b/comparison.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
         <div class="mainPart" data-simplebar>
-          <p class="biggestAssText">Comparison between Hoi4 and Civ6<br></p>
+          <p class="biggestAssText">Comparison between HoI4 and Civ6<br></p>
           <p>Hearts of Iron IV (HoI4) and Civilization VI (Civ6) are both popular strategy games, but they offer distinct gaming experiences in terms of gameplay, setting, and focus. Here's a brief comparison:</p>
           <p><br><b class="bigAssText">1. Genre</b><br>
             <b>Hearts of Iron IV:</b> Hearts of Iron IV is a grand strategy game, known for its intricate and detailed simulation of World War II dynamics. Falling into the grand strategy genre, HoI4 demands a deep understanding of political, military, and economic aspects as players navigate the historical events and challenges of the 20th century. The focus is on macro-level management, offering players the opportunity to shape the outcome of the war through strategic decisions, diplomatic maneuvering, and resource allocation.
