--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HOI4>>CIV6</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
   <div id="myModal" class="modal">
