massive UI changes alongside file structure redo

--- a/HTML/basic_info.html
+++ b/HTML/basic_info.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOI4>>CIV6</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <script src="scripts.js" defer></script>
+    <title>Basic Info</title>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" href="../IMAGES/icon/favicon.ico" type="image/x-icon">
+    <script src="../SCRIPTS/scripts.js" defer></script>
 </head>
 <body>
   <div id="myModal" class="modal">
@@ -16,16 +16,18 @@
     </div>
   </div>
     <header>
-      <h1>Hearts of Iron IV</h1>
-      <nav>
-        <div class="topnav">
-          <a class="active width" href="index.html">Basic Info</a>
-          <a class="width" href="picturegallery.html">Picture Gallery</a>
-          <a class="width" href="comparison.html">Comparison against CiV6</a>
-          <a class="width" href="contact.html">Contact and info about the website</a>
-        </div>
-      </nav>
+      <h1>Basic info about Hearts of Iron IV</h1>
     </header>
+
+    <nav>
+      <div class="topnav">
+        <a class="active width" href="basic_info.html">Basic Info</a>
+        <a class="width" href="picturegallery.html">Picture Gallery</a>
+        <a class="special width" href="hoidle.html">HOIDLE</a>
+        <a class="width" href="comparison.html">Comparison</a>
+        <a class="width" href="contact.html">Contact & Info</a>
+      </div>
+    </nav>
 
     <div class="mainPart">
       <p><b>Some basic information about Hearts of Iron IV</b><br>Hearts of Iron IV is a grand strategy video game developed by Paradox Interactive. Released in 2016, it is set during World War II and allows players to take control of a nation and lead it through the war. The game is known for its complex mechanics, which include military, diplomatic, economic, and technological aspects. Players can engage in historical events, shape the outcome of the war, and experience a detailed and realistic simulation of global conflict during the 20th century. HOI4 is widely praised for its depth and strategic complexity, making it a popular choice among enthusiasts of historical strategy games.</p>
