--- a/HTML/comparison.html
+++ b/HTML/comparison.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOI4>>CIV6</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <script src="scripts.js" defer></script>
+    <title>Comparison</title>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" href="../IMAGES/icon/favicon.ico" type="image/x-icon">
+    <script src="../SCRIPTS/scripts.js" defer></script>
     <link rel="stylesheet" href="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.css" integrity="sha384-CaZ9HRrOe1XpcaGkGyOT4yFc1EAAbTwQ9j6iZt0ewhucMuh1iZDrPOnGjbb4SSt3" crossorigin="anonymous">
     <script src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js" integrity="sha384-oM5U7HaoT1uFyCMwe4FNjJ5MUEt/IGgF8nZG6K8M/A9fIpA3Sz4ri2thQqU6qBsp" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <header>
-      <h1>Hearts of Iron IV</h1>
-      <nav>
-        <div class="topnav">
-          <a class="width" href="index.html">Basic Info</a>
-          <a class="width" href="picturegallery.html">Picture Gallery</a>
-          <a class="active width" href="comparison.html">Comparison against CiV6</a>
-          <a class="width" href="contact.html">Contact and info about the website</a>
-        </div>
-      </nav>
+      <h1>Comparison between Hearts of Iron IV and Civilization VI</h1>
     </header>
+
+    <nav>
+      <div class="topnav">
+        <a class="width" href="basic_info.html">Basic Info</a>
+        <a class="width" href="picturegallery.html">Picture Gallery</a>
+        <a class="special width" href="hoidle.html">HOIDLE</a>
+        <a class="active width" href="comparison.html">Comparison</a>
+        <a class="width" href="contact.html">Contact & Info</a>
+      </div>
+    </nav>
         <div class="mainPart" data-simplebar>
           <p class="biggestAssText">Comparison between HoI4 and Civ6<br></p>
           <p>Hearts of Iron IV (HoI4) and Civilization VI (Civ6) are both popular strategy games, but they offer distinct gaming experiences in terms of gameplay, setting, and focus. Here's a brief comparison:</p>
