--- a/HTML/picturegallery.html
+++ b/HTML/picturegallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture Gallery</title>
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="../../IMAGES/icon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../IMAGES/icon/favicon.ico" type="image/x-icon">
     <script src="../SCRIPTS/scripts.js" defer></script>
     <link rel="stylesheet" href="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.css" integrity="sha384-CaZ9HRrOe1XpcaGkGyOT4yFc1EAAbTwQ9j6iZt0ewhucMuh1iZDrPOnGjbb4SSt3" crossorigin="anonymous">
     <script src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js" integrity="sha384-oM5U7HaoT1uFyCMwe4FNjJ5MUEt/IGgF8nZG6K8M/A9fIpA3Sz4ri2thQqU6qBsp" crossorigin="anonymous" defer></script>
@@ -28,7 +28,7 @@
     <div class="gallery" data-simplebar>
       <div class="image-container">
           <a href="../IMAGES/screenshots/hoi4_ger1939.png" target="_blank">
-              <img src="../IMAGES/screenshots/hoi4_ger1939.png" alt="Image 1">
+              <img src="../IMAGES/screenshots/hoi4_ger1939.png" alt="Image 1">  
           </a>
           <p class="image-title">Germany in 1939</p>
       </div>
