--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoidle</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="../IMAGES/icon/favicon.ico" type="image/x-icon">
-    <script src="../SCRIPTS/scripts.js" defer></script>
+    <link rel="stylesheet" href="../src/assets/css/style.css">
+    <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <script src="../src/assets/js/scripts.js" defer></script>
 </head>
 
 <body>
