--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=HTML/hoidle.html">
+    <meta http-equiv="refresh" content="0;url=public/hoidle.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="HTML/hoidle.html">click here</a>.</p>
+    <p>If you are not redirected, <a href="public/hoidle.html">click here</a>.</p>
 </body>
 </html>
