--- a/public/basic_info.html
+++ b/public/basic_info.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Info</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="../IMAGES/icon/favicon.ico" type="image/x-icon">
-    <script src="../SCRIPTS/scripts.js" defer></script>
-</head>
+    <link rel="stylesheet" href="../src/assets/css/style.css">
+    <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <script src="../src/assets/js/scripts.js" defer></script>
+</head> 
+
 <body>
   <div id="myModal" class="modal">
     <div class="modal-content">
