--- a/public/picture_info/germanWorld.html
+++ b/public/picture_info/germanWorld.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>German World</title>
-    <link rel="stylesheet" href="infoStyle.css">
-    <link rel="shortcut icon" href="../images/icon/favicon.ico" type="image/x-icon">
-    <script src="../SCRIPTS/scripts.js" defer></script>
+    <link rel="stylesheet" href="../../src/assets/css/infoStyle.css">
+    <link rel="shortcut icon" href="../../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <script src="../../src/assets/js/scripts.js" defer></script>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
@@ -27,6 +27,6 @@
     </div>
     
     <div class="goBackButton">
-        <a class="link" href="../html/picturegallery.html">Go back</a>
+        <a class="link" href="../picturegallery.html">Go back</a>
     </div>
 </body>
