all the info for images done.

--- a/public/picture_info/germanyVSAsia.html
+++ b/public/picture_info/germanyVSAsia.html
@@ -16,13 +16,13 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/hoi4_germanyvsasia.png" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/hoi4_germanyvsasia.png" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
-            <h2>German World Conquest</h2>
-            <p><br>My first ever World Conquest done as Germany. Fun fact: I did it without any focuses from the main political branch.</p>
+            <h2>Germany VS Asia</h2>
+            <p><br>This was during the world conquest, I was fighting nearly the whole Asia.</p>
         </div>
     </div>
     
