--- a/public/picture_info/philipinesNI.html
+++ b/public/picture_info/philipinesNI.html
@@ -16,13 +16,13 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/hoi4_philipinesNavallyInvaded.png" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/hoi4_philipinesNavallyInvaded.png" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
-            <h2>German World Conquest</h2>
-            <p><br>My first ever World Conquest done as Germany. Fun fact: I did it without any focuses from the main political branch.</p>
+            <h2>Naval invasion plans of the Philippines</h2>
+            <p><br>My naval invasion plans (as japan) against the Philippines (they capped in less then a month after landing)</p>
         </div>
     </div>
     
