--- a/public/picture_info/russiaDismembered.html
+++ b/public/picture_info/russiaDismembered.html
@@ -16,13 +16,13 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/russiaDismembered.jpg" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/russiaDismembered.jpg" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
-            <h2>German World Conquest</h2>
-            <p><br>My first ever World Conquest done as Germany. Fun fact: I did it without any focuses from the main political branch.</p>
+            <h2>Dismembered Russia</h2>
+            <p><br>Russia dismembered after a peace deal. What else can I say.</p>
         </div>
     </div>
     
