--- a/public/picture_info/czechoslovakiamodstates.html
+++ b/public/picture_info/czechoslovakiamodstates.html
@@ -16,13 +16,13 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/hoi4_czechoslovakiaredesignedstates.png" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/hoi4_czechoslovakiaredesignedstates.png" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
-            <h2>German World Conquest</h2>
-            <p><br>My first ever World Conquest done as Germany. Fun fact: I did it without any focuses from the main political branch.</p>
+            <h2>States of Czechoslovakia in my mod.</h2>
+            <p><br>I added the states and quite a bit of Victory points. The mod is nowhere near done.</p>
         </div>
     </div>
     
