--- a/public/picture_info/reallyBigMilInd.html
+++ b/public/picture_info/reallyBigMilInd.html
@@ -16,13 +16,13 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/hoi4_MASSIVEgermanIndustry.png" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/hoi4_MASSIVEgermanIndustry.png" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
-            <h2>German World Conquest</h2>
-            <p><br>My first ever World Conquest done as Germany. Fun fact: I did it without any focuses from the main political branch.</p>
+            <h2>A HUGE military industry</h2>
+            <p><br>This was so many military factories that I didn't know what to do with.</p>
         </div>
     </div>
     
