--- a/public/picture_info/steamachivementshoi4.html
+++ b/public/picture_info/steamachivementshoi4.html
@@ -16,13 +16,13 @@
 
     <div class="parent">
         <div class="image">
-            <a href="../../src/assets/images/screenshots/hoi4_gerworldconq.png" target="_blank">
-                <img class="img" src="../../src/assets/images/screenshots/hoi4_gerworldconq.png" alt="Germany World Conquest">
+            <a href="../../src/assets/images/screenshots/hoi4_steamstats2.png" target="_blank">
+                <img class="img" src="../../src/assets/images/screenshots/hoi4_steamstats2.png" alt="Germany World Conquest">
             </a>
         </div>
         <div class="basicInfo">
-            <h2>German World Conquest</h2>
-            <p><br>My first ever World Conquest done as Germany. Fun fact: I did it without any focuses from the main political branch.</p>
+            <h2>My 2023 achivements for hoi4</h2>
+            <p><br>I got nearly 25% of all the achivements even when not going for most of them. Nice.</p>
         </div>
     </div>
     
