added comments everywhere

--- a/public/basic_info.html
+++ b/public/basic_info.html
@@ -1,73 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the webpage -->
     <title>Basic Info</title>
+    <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="../src/assets/css/style.css">
+    <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
 </head> 
 
 <body>
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-        <p><b>WARNING</b><br>This website includes depictions of flags associated with totalitarian regimes, including symbols from historical periods such as Nazism. The intention behind showcasing these symbols is not to endorse or support the ideologies represented. The content is presented for educational and historical purposes only. Viewer discretion is advised.</p>
-        <button id="continueButton">Continue</button>
+    <!-- Modal section for warning message -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <!-- Warning message -->
+            <p><b>WARNING</b><br>This website includes depictions of flags associated with totalitarian regimes, including symbols from historical periods such as Nazism. The intention behind showcasing these symbols is not to endorse or support the ideologies represented. The content is presented for educational and historical purposes only. Viewer discretion is advised.</p>
+            <!-- Button to continue -->
+            <button id="continueButton">Continue</button>
+        </div>
     </div>
-  </div>
+    
+    <!-- Header section -->
     <header>
-      <h1>Basic info about Hearts of Iron IV</h1>
+        <!-- Heading of the page -->
+        <h1>Basic info about Hearts of Iron IV</h1>
     </header>
 
+    <!-- Navigation bar -->
     <nav>
-      <div class="topnav">
-        <a class="active width" href="basic_info.html">Basic Info</a>
-        <a class="width" href="picturegallery.html">Picture Gallery</a>
-        <a class="special width" href="hoidle.html">HOIDLE</a>
-        <a class="width" href="comparison.html">Comparison</a>
-        <a class="width" href="contact.html">Contact & Info</a>
-      </div>
+        <div class="topnav">
+            <!-- Links to different sections -->
+            <a class="active width" href="basic_info.html">Basic Info</a>
+            <a class="width" href="picturegallery.html">Picture Gallery</a>
+            <a class="special width" href="hoidle.html">HOIDLE</a>
+            <a class="width" href="comparison.html">Comparison</a>
+            <a class="width" href="contact.html">Contact & Info</a>
+        </div>
     </nav>
 
+    <!-- Main content section -->
     <div class="mainPart">
-      <p><b>Some basic information about Hearts of Iron IV</b><br>Hearts of Iron IV is a grand strategy video game developed by Paradox Interactive. Released in 2016, it is set during World War II and allows players to take control of a nation and lead it through the war. The game is known for its complex mechanics, which include military, diplomatic, economic, and technological aspects. Players can engage in historical events, shape the outcome of the war, and experience a detailed and realistic simulation of global conflict during the 20th century. HOI4 is widely praised for its depth and strategic complexity, making it a popular choice among enthusiasts of historical strategy games.</p>
-      <p><br><b>Requirements</b><br>Let's take a look at the system requirements for running Hearts of Iron IV.</p>
-      <table>
-        <tr>
-          <th class="firstOne">xxxxxxx</th>
-          <th>CPU (Intel)</th>
-          <th>CPU (AMD)</th>
-          <th>GPU (NVidia)</th>
-          <th>GPU (AMD)</th>
-          <th>VRAM</th>
-          <th>RAM</th>
-          <th>System Storage</th>
-        </tr> 
-        <tr>
-          <td class="firstOne">Minimum requirements</td>
-          <td>Core 2 Quad Q9400 (Aug 2008)</td>
-          <td>Athlon II X4 650 (2011)</td>
-          <td>GeForce GTX 470 (Mar 2010)</td>
-          <td>Radeon HD 5850 (Sep 2009)</td>
-          <td>1024MB</td>
-          <td>4096MB</td>
-          <td>2GB</td>
-        </tr>
-        <tr>
-          <td class="firstOne">Recommended requirements</td>
-          <td>Core i5-750 (Sep 2009)</td>
-          <td>Phenom II X4 955 (Apr 2009)</td>
-          <td>GeForce GTX 570 (Dec 2010)</td>
-          <td>Radeon HD 6950 (Dec 2010)</td>
-          <td>2048MB</td>
-          <td>4096MB</td>
-          <td>2GB</td>
-        </tr>
-      </table>
-      <p><br>As you can see, Hearts of Iron IV isn't difficult to run. You can run it with very old hardware, but I have to warn you, in the 40s in game, it gets really laggy.</p>
-      <p><br><b>Difficulty</b><br>Hearts of Iron IV can be quite challenging for newcomers due to its complex strategic gameplay and steep learning curve. The game requires a solid understanding of military tactics, resource management, and diplomatic intricacies during World War II. Players must navigate through intricate political systems, handle diverse armies, and make crucial decisions that can alter the course of history. The vast array of options for research, production, and division design adds depth but also demands strategic foresight. The dynamic nature of global conflicts and the need to adapt to unforeseen challenges make mastering HoI4 a rewarding yet demanding experience, especially for those new to grand strategy games.</p>
-    
+        <!-- Paragraph about Hearts of Iron IV -->
+        <p><b>Some basic information about Hearts of Iron IV</b><br>Hearts of Iron IV is a grand strategy video game developed by Paradox Interactive. Released in 2016, it is set during World War II and allows players to take control of a nation and lead it through the war. The game is known for its complex mechanics, which include military, diplomatic, economic, and technological aspects. Players can engage in historical events, shape the outcome of the war, and experience a detailed and realistic simulation of global conflict during the 20th century. HOI4 is widely praised for its depth and strategic complexity, making it a popular choice among enthusiasts of historical strategy games.</p>
+        <!-- Table for system requirements -->
+        <table>
+            <tr>
+                <!-- Table header -->
+                <th class="firstOne">xxxxxxx</th>
+                <th>CPU (Intel)</th>
+                <th>CPU (AMD)</th>
+                <th>GPU (NVidia)</th>
+                <th>GPU (AMD)</th>
+                <th>VRAM</th>
+                <th>RAM</th>
+                <th>System Storage</th>
+            </tr> 
+            <!-- Table rows for minimum requirements -->
+            <tr>
+                <td class="firstOne">Minimum requirements</td>
+                <td>Core 2 Quad Q9400 (Aug 2008)</td>
+                <td>Athlon II X4 650 (2011)</td>
+                <td>GeForce GTX 470 (Mar 2010)</td>
+                <td>Radeon HD 5850 (Sep 2009)</td>
+                <td>1024MB</td>
+                <td>4096MB</td>
+                <td>2GB</td>
+            </tr>
+            <!-- Table rows for recommended requirements -->
+            <tr>
+                <td class="firstOne">Recommended requirements</td>
+                <td>Core i5-750 (Sep 2009)</td>
+                <td>Phenom II X4 955 (Apr 2009)</td>
+                <td>GeForce GTX 570 (Dec 2010)</td>
+                <td>Radeon HD 6950 (Dec 2010)</td>
+                <td>2048MB</td>
+                <td>4096MB</td>
+                <td>2GB</td>
+            </tr>
+        </table>
+        <!-- Paragraph about system requirements -->
+        <p><br>As you can see, Hearts of Iron IV isn't difficult to run. You can run it with very old hardware, but I have to warn you, in the 40s in game, it gets really laggy.</p>
+        <!-- Paragraph about difficulty -->
+        <p><br><b>Difficulty</b><br>Hearts of Iron IV can be quite challenging for newcomers due to its complex strategic gameplay and steep learning curve. The game requires a solid understanding of military tactics, resource management, and diplomatic intricacies during World War II. Players must navigate through intricate political systems, handle diverse armies, and make crucial decisions that can alter the course of history. The vast array of options for research, production, and division design adds depth but also demands strategic foresight. The dynamic nature of global conflicts and the need to adapt to unforeseen challenges make mastering HoI4 a rewarding yet demanding experience, especially for those new to grand strategy games.</p>
     </div>
 
 </body>
