--- a/public/contact.html
+++ b/public/contact.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the webpage -->
     <title>Contact</title>
+    <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="../src/assets/css/style.css">
+    <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
 </head>
 <body>
+    <!-- Header section -->
     <header>
-      <h1>Contact and light info about the website</h1>
+        <!-- Heading for contact and light info -->
+        <h1>Contact and light info about the website</h1>
     </header>
+    <!-- Navigation bar -->
     <nav>
-      <div class="topnav">
-        <a class="width" href="basic_info.html">Basic Info</a>
-        <a class="width" href="picturegallery.html">Picture Gallery</a>
-        <a class="special width" href="hoidle.html">HOIDLE</a>
-        <a class="width" href="comparison.html">Comparison</a>
-        <a class="active width" href="contact.html">Contact & Info</a>
-      </div>
+        <div class="topnav">
+            <!-- Links to different sections -->
+            <a class="width" href="basic_info.html">Basic Info</a>
+            <a class="width" href="picturegallery.html">Picture Gallery</a>
+            <a class="special width" href="hoidle.html">HOIDLE</a>
+            <a class="width" href="comparison.html">Comparison</a>
+            <a class="active width" href="contact.html">Contact & Info</a>
+        </div>
     </nav>
 
+    <!-- Main section for contact information -->
     <div class="mainPart ContactPart">
-      <p class="Contact">The entire webpage was made by Robert Bilík. It was made as a final work for WEB at my high school.
-        <br><br><b>Contact info:</b><br>Email: robert.bilik@spsehavirov.cz<br>Youtube channel: <a href="https://www.youtube.com/@robkooyt" target="_blank">RobkooYT</a><br>Reddit: <a href="https://www.reddit.com/user/u_Robkoo" target="_blank">u_Robkoo</a><br>Discord: Robkoo<br>Github: <a href="https://github.com/RobkooCZ" target="_blank">RobkooCZ</a>
-        <br><br>(PS: You can check out the background images on this page :D)
-        <br><br>The website works for Edge, Mozzila, Opera GX & Opera and Chrome. It's made with HTML5, CSS and JS. 
-        <br><br>Thanks to <a href="javascript:openSite();">KejBeg</a> for <b>helping</b> me with JS!
-      </p>
+        <!-- Paragraph containing contact info -->
+        <p class="Contact">The entire webpage was made by Robert Bilík. It was made as a final work for WEB at my high school.
+            <br><br><b>Contact info:</b><br>Email: robert.bilik@spsehavirov.cz<br>Youtube channel: <a href="https://www.youtube.com/@robkooyt" target="_blank">RobkooYT</a><br>Reddit: <a href="https://www.reddit.com/user/u_Robkoo" target="_blank">u_Robkoo</a><br>Discord: Robkoo<br>Github: <a href="https://github.com/RobkooCZ" target="_blank">RobkooCZ</a>
+            <br><br>(PS: You can check out the background images on this page :D)
+            <br><br>The website works for Edge, Mozzila, Opera GX & Opera and Chrome. It's made with HTML5, CSS and JS. 
+            <br><br>Thanks to <a href="javascript:openSite();">KejBeg</a> for <b>helping</b> me with JS!
+        </p>
     </div>
 </body>
 </html>
