--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the webpage -->
     <title>Hoidle</title>
+    <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="../src/assets/css/style.css">
+    <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
 </head>
 
 <body>
-  <nav class="flex-container hoidleNav">
-      <div class="topnav">
-        <a class="btn-width" href="basic_info.html">Legacy</a>
-        <a class="special-hoidle width" href="hoidle.html">HOIDLE</a>
-        <a class="btn-width" href="https://galuszka.cz" target="_blank">Contact & info</a>
-      </div>
-  </nav>
+    <!-- Navigation bar -->
+    <nav class="flex-container hoidleNav">
+        <div class="topnav">
+            <!-- Links to different sections -->
+            <a class="btn-width" href="basic_info.html">Legacy</a>
+            <a class="special-hoidle width" href="hoidle.html">HOIDLE</a>
+            <a class="btn-width" href="https://galuszka.cz" target="_blank">Contact & info</a>
+        </div>
+    </nav>
 
+    <!-- Main section -->
     <div class="mainPart">
+        <!-- Heading indicating work in progress -->
         <h2 class="WIP">WORK IN PROGRESS</h2>
     </div>
 </body>
