--- a/public/picture_info/bigStockpile.html
+++ b/public/picture_info/bigStockpile.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the webpage -->
     <title>German World</title>
+    <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="../../src/assets/css/infoStyle.css">
+    <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../../src/assets/images/icons/favicon.ico" type="image/x-icon">
+    <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../../src/assets/js/scripts.js" defer></script>
 </head>
 
 <body>
+    <!-- Header section -->
     <header>
         <h1>Image information</h1>
     </header>
 
+    <!-- Main content section -->
     <div class="parent">
+        <!-- Image container -->
         <div class="image">
+            <!-- Link to the image with 'target=_blank' attribute -->
             <a href="../../src/assets/images/screenshots/hoi4_MASSIVEstockpile.png" target="_blank">
+                <!-- Image element with class 'img' and alt text -->
                 <img class="img" src="../../src/assets/images/screenshots/hoi4_MASSIVEstockpile.png" alt="Germany World Conquest">
             </a>
         </div>
+        <!-- Information about the image -->
         <div class="basicInfo">
+            <!-- Heading for the information -->
             <h2>Big stockpile of equipment I had as Germany.</h2>
+            <!-- Paragraph describing the image -->
             <p><br>As the title says, I had a lot of equipment lol.</p>
         </div>
     </div>
     
+    <!-- Button to go back to the picture gallery -->
     <div class="goBackButton">
+        <!-- Link to the picture gallery page -->
         <a class="link" href="../picturegallery.html">Go back</a>
     </div>
 </body>
+</html>
