javascript breaking website fix

--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -25,6 +25,17 @@
         </div>
     </nav>
 
+    <!-- <button id="settingsButton">
+        <img id="settingsImage" src="../src/assets/images/icons/settings_icon.png" alt="Settings Icon">
+    </button>
+    
+      <div id="settingsOverlay">
+        <div id="settingsWindow">
+          <h2 class="settingsTitle">Settings</h2>
+          <button id="closeButton">Close</button>
+        </div>
+      </div> -->
+
     <!-- Main section -->
     <div class="mainPart">
         <!-- Heading indicating work in progress -->
